poc/tests/errors/test_FplVariableAlreadyDeclared_predicate_01.fpl
Test.Namespace
{
    theory
    {
        pred Test(x: Nat)
        {
            x: Nat
            true
        }
    }
}

##############################

FplVariableAlreadyDeclared:7:13: The name 'x' was already declared in the current context at (5,19)